2008-09-23  Ben Van Mechelen  <me@benvm.be>

	* plugins/o2_sensors/o2_sensors.py:
	    correct copyright notice
	    

2008-09-23  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    Add an update-name property
	* plugins/freeze_frame_data/freeze_frame_data.py:
	    use SensorView widget instead of FreezeFrameDataView
    

2008-09-20  Ben Van Mechelen  <me@benvm.be>

	* plugins/o2_sensors/o2_sensors.py:
	    corrected copyright notice
	    

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* scripts/elm_sim.py:
	    support pids above 0x20
	

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* plugins/Makefile.am:
	    Make sure the new O2 Sensors plugin gets build


2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* plugins/dtc_reader/dtc_reader.py:
	    remove the BITS column from the treeview
	

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	    gui update: get rid of VIN, voltage gets a button
	

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    Add CommandView
	* plugins/live_data/live_data.py:
	    Remove CommandView and LiveDataView
	

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.py:
	* plugins/o2_sensors/o2_sensors.py:
	    Don't automatically enable supported sensors
	    

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* plugins/o2_sensors/Makefile.am:
	* plugins/o2_sensors/o2_sensors.glade:
	* plugins/o2_sensors/o2_sensors.py:
	    Add a new plugin for O2 Sensors
	    

2008-09-12  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    copy LiveDataView to widgets.py so more plugins can use it,
	    it is now called SensorView
	    

2008-09-11  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    Change PID info of the O2 sensors
	

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	* plugins/freeze_frame_data/freeze_frame_data.py: